fix: aligned title and added landmark

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
@@ -30,7 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   align-content: space-around;
-  width: 400px;
+  width: 350px;
   background-color: hsl(0, 0%, 100%);
   box-shadow: 5px 5px 60px 1px rgba(200, 200, 200, 0.8);
   padding: 20px;
@@ -50,14 +53,15 @@ body {
 }
 #main-content #descriptive-text h1 {
   margin: 20px 0;
-  text-align: justify;
-  font-size: 1.8rem;
+  text-align: center;
+  font-size: 1.6rem;
   font-weight: 700;
 }
 #main-content #descriptive-text p {
   text-align: center;
   color: hsl(218, 44%, 22%);
   font-size: 1.15rem;
+  opacity: 50%;
 }
 
 @media screen and (max-width: 375px) {
